CORE-6345: Rewrite OSGi bootstrapper in Java. (#1942)